--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "Katuma",
-  "repository" :{ 
+  "version": "0.0.1",
+  "author": "Adrian Ortuzar",
+  "description": "Front End code of katuma application",
+  "contributors": ["Naoise Golden", "Andres Gutierrez"],
+  "repository" :{
     "type" : "git",
     "url" : "https://github.com/coopdevs/katuma-web-app"
   },
-  "version": "0.0.1",
-  "author": "Adrian Ortuzar",
-  "contributors": ["Naoise Golden"],
+  "main": "js/app.js",
+  "dependencies": {
+    "react": "~0.9"
+  },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-handlebars": "~0.7.0 ",
-    "grunt-contrib-less": "~0.11.0 ",
-    "grunt-contrib-watch": "~0.5.3 ",
-    "grunt-shell":"~0.7.0"
+    "browserify": "^4.1.5",
+    "reactify": "~0.4.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-browserify": "^2.1.0",
+    "grunt-contrib-connect": "^0.7.1",
+    "backbone": "^1.1.2",
+    "underscore": "^1.6.0"
   }
 }
