--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "main": "js/app.js",
   "dependencies": {
-    "react": "~0.9"
+    "react": "~0.10"
   },
   "devDependencies": {
     "browserify": "^4.1.5",
@@ -20,6 +20,7 @@
     "grunt-browserify": "^2.1.0",
     "grunt-contrib-connect": "^0.7.1",
     "backbone": "^1.1.2",
-    "underscore": "^1.6.0"
+    "underscore": "^1.6.0",
+    "react-translate-component": "~0.4.0"
   }
 }
