--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "react": "~0.10"
   },
   "devDependencies": {
+    "http-proxy": "~0.10.2",
+    "matchdep": "~0.1.2",
+    "growl": "~1.7.0",
     "browserify": "^4.1.5",
     "reactify": "~0.4.0",
     "grunt": "^0.4.5",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-browserify": "^2.1.0",
     "grunt-contrib-connect": "^0.7.1",
+    "jquery": "~2.1.0",
     "backbone": "^1.1.2",
     "underscore": "^1.6.0",
     "react-translate-component": "~0.4.0"
